animação condicionais refeita. Ainda não pronta...

--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -53,10 +53,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lousa-teoria.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="fHs-5H-6hg">
+                                <rect key="frame" x="0.0" y="674" width="768" height="350"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <containerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MDB-dg-lXx">
                                 <rect key="frame" x="20" y="674" width="728" height="350"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="sIv-jj-fJc" kind="embed" id="eLg-Xe-wVQ"/>
                                 </connections>
@@ -206,7 +210,6 @@
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TlP-2c-K5g">
                         <rect key="frame" x="0.0" y="0.0" width="728" height="350"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.33279632121842095" green="0.35082736817683685" blue="0.3928571428571429" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <toolbarItems/>
                 </viewController>
@@ -251,6 +254,9 @@
             <point key="canvasLocation" x="2943" y="-125"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="lousa-teoria.jpg" width="728" height="350"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackOpaque"/>
         <simulatedOrientationMetrics key="orientation"/>
