--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,13 +1,72 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="yQr-XW-A8I">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--Tutorial View Controller-->
+        <scene sceneID="Uqd-W6-BTv">
+            <objects>
+                <viewController id="yQr-XW-A8I" customClass="TutorialViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BWz-i8-Cm3"/>
+                        <viewControllerLayoutGuide type="bottom" id="ADa-Hb-Irg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jQK-dj-6Lc">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbo-wd-RWR">
+                                <rect key="frame" x="679" y="20" width="61" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Bold" family="Avenir Next Condensed" pointSize="19"/>
+                                <state key="normal" title="Pular">
+                                    <color key="titleColor" red="1" green="0.99306149732541715" blue="0.9944275895937027" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pularTutorial:" destination="yQr-XW-A8I" eventType="touchUpInside" id="djk-IE-ixH"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mjs-sf-Md5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-332" y="-1419"/>
+        </scene>
+        <!--Filho View Controller-->
+        <scene sceneID="tP2-fB-Y4l">
+            <objects>
+                <viewController storyboardIdentifier="imagensTutorial" id="eYm-gd-ija" customClass="FilhoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Fo-QW-Ntj"/>
+                        <viewControllerLayoutGuide type="bottom" id="050-6O-GX3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Kqq-3Z-vh2">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UUC-9B-9ek">
+                                <rect key="frame" x="0.0" y="0.0" width="750" height="940"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="exibirImagem" destination="UUC-9B-9ek" id="BhJ-M1-cn5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9XM-1U-xVq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="616" y="-1419"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="GhY-fp-WCT">
             <objects>
-                <navigationController definesPresentationContext="YES" id="tHn-97-uZ9" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="navigationController" definesPresentationContext="YES" id="tHn-97-uZ9" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rr3-4G-eh8">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -99,7 +158,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rwh-5a-MlG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="548" y="-125"/>
+            <point key="canvasLocation" x="616" y="-125"/>
         </scene>
         <!--Lista De Exercicios View Controller-->
         <scene sceneID="LLt-O6-lPX">
@@ -223,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1De-U9-E6b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="430" y="1034"/>
+            <point key="canvasLocation" x="616" y="1137"/>
         </scene>
         <!--Sub View Conteudo-->
         <scene sceneID="9wj-8y-ED1">
@@ -241,7 +300,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="byk-aF-pSr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1521" y="1381"/>
+            <point key="canvasLocation" x="1744" y="1137"/>
         </scene>
         <!--ExercicioV Iew Contoller - controlador q tem a lista de exercicios-->
         <scene sceneID="dzV-zg-u19">
